crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/valid/sync-no-await.js
/* should not generate diagnostics */
page.locator('.my-element');
page.getByRole('button');
expect(1).toBe(1);

