crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/invalid/locator.js
/* should generate diagnostics */
await page.locator('.my-element');

